--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
       jdk: openjdk7 # start with OpenJDK7 and switch later to 6
       env:
         - INCLUDE_IN_COVERAGE=false
-        - GRADLE_DIST_URL=http://services.gradle.org/distributions/gradle-2.14.1-bin.zip
+        - GRADLE_DIST_URL=https://services.gradle.org/distributions/gradle-3.5.1-bin.zip
         - SWITCH_TO_OPENJDK6=true
     - name: "Java 7 compatible"
       jdk: openjdk7
@@ -38,12 +38,6 @@ matrix:
 
 install:
 - |
-  # check if switching to OpenJDK 6 is needed
-  if [ "$SWITCH_TO_OPENJDK6" = true ]; then
-      jdk_switcher home openjdk6
-      jdk_switcher use openjdk6
-      javac -J-Xmx32m -version
-  fi
   # next patch the gradle wrapper properties
   if [ "x$GRADLE_DIST_URL" != "x" ]; then
       GRADLE_WRAPPER_PROPERTIES=./gradle/wrapper/gradle-wrapper.properties
@@ -53,11 +47,20 @@ install:
   # next assemble
   ./gradlew assemble
 
-# Runs tests that check the implementation (unit tests)
+# Runs tests thatcheck the implementation (unit tests)
 script:
 - |
   # run tests
-  ./gradlew check --info
+  # check if switching to OpenJDK 6 is needed
+  $JAVA_6_HOME=""
+  if [ "$SWITCH_TO_OPENJDK6" = true ]; then
+      $JAVA_6_HOME=$(jdk_switcher home openjdk6)
+      ./gradlew check -Ptest.executable=$JAVA_6_HOME --info
+  else
+      # no need to switch to Java 6
+      ./gradlew check --info
+  fi
+
 
 # Runs code coverage when everything else was successful
 
