--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
   # check if switching to OpenJDK 6 is needed
   $JAVA_6_HOME=""
   if [ "$SWITCH_TO_OPENJDK6" = true ]; then
-      $JAVA_6_HOME=$(jdk_switcher home openjdk6)
+      JAVA_6_HOME=$(jdk_switcher home openjdk6)
       ./gradlew check -Ptest.executable=$JAVA_6_HOME --info
   else
       # no need to switch to Java 6
