--- a/build.gradle
+++ b/build.gradle
@@ -25,22 +25,16 @@ plugins {
     id 'jacoco'
     id 'maven-publish'
     id 'com.github.hierynomus.license' version '0.15.0'
-    id 'ru.vyarus.animalsniffer' version '1.4.6' apply false
+    id 'ru.vyarus.animalsniffer' version '1.4.6'
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'com.jfrog.bintray' version '1.8.4'
 }
 
 group 'com.dynatrace.openkit'
-
 version readVersion()
 
-def groupString = group
 def title = 'Dynatrace OpenKit SDK for Java'
 def vendor = 'Dynatrace LLC'
-
-if (Integer.valueOf(System.getenv("TARGET_COMPATIBILITY") ?: "6") <= 8) {
-    apply plugin: 'ru.vyarus.animalsniffer'
-}
 
 apply from: "gradle/license.gradle"
 
@@ -48,28 +42,27 @@ repositories {
     mavenCentral()
 }
 
-def sourceTarget = System.getenv("TARGET_COMPATIBILITY") ?: "6"
 def jvmsToTest = System.getenv("JVMS_TO_TEST") ?: "JAVA_HOME"
+def isGradle5OrAbove = getGradleMajorVersion() >= 5
 
-sourceCompatibility = "1." + sourceTarget
-targetCompatibility = "1." + sourceTarget
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
 dependencies {
-    if (Integer.valueOf(sourceTarget) <= 8) {
-        signature 'org.codehaus.mojo.signature:java16:1.1@signature'
-    }
+    signature 'org.codehaus.mojo.signature:java16:1.1@signature'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
 
 jar {
-    baseName = 'openkit'
-    if (System.getenv('TRAVIS') != null) {
-        classifier = 'java' + sourceTarget
+    if (isGradle5OrAbove) {
+        archiveBaseName = 'openkit'
+    } else {
+        baseName = 'openkit'
     }
 
     // split version into specification & implementation version
@@ -102,14 +95,14 @@ jar {
         }
     }
 
-    def name = groupString.replaceAll('\\.', '/')
+    def name = group.replaceAll('\\.', '/')
 
     manifest {
         attributes 'Name': "${name}/",
                 'Specification-Title': title,
                 'Specification-Version': specVersion,
                 'Specification-Vendor': vendor,
-                'Implementation-Title': groupString,
+                'Implementation-Title': group,
                 'Implementation-Version': implVersion,
                 'Implementation-Vendor': vendor,
                 'url': 'https://github.com/Dynatrace/openkit-java'
@@ -117,18 +110,33 @@ jar {
 }
 
 task sourceJar(type: Jar) {
-    classifier = 'sources'
+    if (isGradle5OrAbove) {
+        archiveClassifier = 'sources'
+    } else {
+        classifier = 'sources'
+    }
+
     from sourceSets.main.allJava
 }
 
 task javadocZip(type: Zip, dependsOn: javadoc) {
-    baseName = 'openkit'
-    classifier = 'javadoc'
+    if (isGradle5OrAbove) {
+        archiveBaseName = 'openkit'
+        archiveClassifier = 'javadoc'
+    } else {
+        baseName = 'openkit'
+        classifier = 'sources'
+    }
+
     from javadoc.destinationDir
 }
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
+    if (isGradle5OrAbove) {
+        archiveClassifier = 'javadoc'
+    } else {
+        classifier = 'javadoc'
+    }
     from javadoc
 }
 
@@ -136,14 +144,13 @@ apply from: "gradle/coverage.gradle"
 apply from: "gradle/publish.gradle"
 
 // run each test for every JAVA_HOME_* environment which is specified and set as environment
-[[sourceTarget], jvmsToTest.split(",")].combinations { targetJVM, envJVM ->
-    if(System.getenv(envJVM) != null) {
-        def configName = "${targetJVM}-${envJVM}"
-        task "test-${configName}"(type: Test) {
+jvmsToTest.split(",").each { envJVM ->
+    if (System.getenv(envJVM) != null) {
+        task "test-${envJVM}"(type: Test) {
             exclude '**/local/*.class'
             executable = System.getenv(envJVM) + "/bin/java"
         }
-        tasks.test.dependsOn tasks."test-${configName}"
+        tasks.test.dependsOn tasks."test-${envJVM}"
     } else {
         logger.quiet("Can't find " + envJVM + ". Test ignored!")
     }
@@ -152,17 +159,29 @@ apply from: "gradle/publish.gradle"
 test {
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
+if (project.findProperty('test.executable') != null) {
+    test.executable = project.findProperty('test.executable') + "/bin/java"
+}
 
 def readVersion() {
-    if(version == 'unspecified') {
+    if (version == 'unspecified') {
         Properties properties = new Properties()
         File propertiesFile = file('version.properties')
         propertiesFile.withInputStream {
             properties.load(it)
         }
-        if(properties.version != null) {
+        if (properties.version != null) {
             return properties.version
         }
     }
     return version
+}
+
+def getGradleMajorVersion() {
+    def majorMinorSeparatorIndex = gradle.gradleVersion.indexOf('.')
+    if (majorMinorSeparatorIndex != -1) {
+        return Integer.parseInt(gradle.gradleVersion.substring(0, majorMinorSeparatorIndex))
+    } else {
+        return Integer.parseInt(gradle.gradleVersion)
+    }
 }
