Adapt patterns for GitHub releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ deploy:
 
     # Files to be added to this release
     file:
-    - build/libs/openkit*-java*.jar
+    - build/libs/openkit-*.jar
     - build/distributions/openkit*-javadoc.zip
     # Enable wildcard operators in the file selector above
     file_glob: true
