Pull request #186: Publish to Maven Central Repository
Merge in OP/openkit-java from feature/DEP-12068 to main

* commit '030bd0c017c331cf4be154428e620429031807c4':
  Publish to Maven Central Repository

GitOrigin-RevId: 0e7df3fa605f563e724744c2c4c4c09c2a29707a

--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,11 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'maven-publish'
+    id 'signing'
     id 'com.github.hierynomus.license' version '0.15.0'
-    id 'ru.vyarus.animalsniffer' version '1.4.6'
+    id 'ru.vyarus.animalsniffer' version '1.5.3'
     id 'com.github.kt3k.coveralls' version '2.8.2'
-    id 'com.jfrog.bintray' version '1.8.4'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.0.0'
 }
 
 group 'com.dynatrace.openkit'
